# Triomino

./: .readthedocs.yaml  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  README.rst
.githhub/workflows/: cmake.yml
.github/workflows/: cmake.yml
cmake/: FindCcLint.cmake  FindClangFormat.cmake  FindCoverage.cmake  FindCppCheck.cmake  FindFlawFinder.cmake  FindHtmlCoverage.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  api.rst  applications.rst  conf.py  display.rst  generate.rst  index.rst
src/: CMakeLists.txt  triomino-display.c  triomino-generate.c  triomino.c  triomino.h  triomino.pc.in
test/: CMakeLists.txt  test-display.c  test-file-error-write.c  test-file.c  test-generate.c  test-triomino-generate.c
test/lib_tests/: test-file-error-read.c
